# SilentGuard

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pyproject.toml.save
.github/workflows/: python-app.yml
assets/: silentguard.desktop
packaging/aur/: PKGBUILD
src/silentguard/: actions.py  blocked_view.py  connection_state.py  detection.py  events.py  main.py  memory.py  mitigation.py  monitor.py  rules.py  tui.py
src/silentguard/api/: __init__.py  handlers.py  server.py
tests/: conftest.py  test_actions.py  test_api_events.py  test_api_handlers.py  test_api_mitigation.py  test_api_server.py  test_connection_state.py  test_detection.py  test_events.py  test_mitigation.py  test_monitor.py
